ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-k8s-ingress
spec:
  rules:
    - host: hello-k8s.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-k8s
                port:
                  number: 5000
